# dioxus_replicate_medium

./: Cargo.toml  Dioxus.toml  test.html
src/: main.rs
src/api/: article.rs  auth.rs  mod.rs  profile.rs  tag.rs
src/components/: article_list_pagination.rs  articlelist.rs  articlepagination.rs  footer.rs  header.rs  mod.rs  navbar.rs  pagination.rs  taglist.rs
src/stores/: app_state.rs
src/views/: article.rs  blog.rs  create.rs  create_edit.rs  edit.rs  global_feed.rs  home.rs  login.rs  mod.rs  profile.rs  register.rs  settings.rs  tag_feed.rs  your_feed.rs
