[package]
name = "dioxus_replicate_medium"
version = "0.1.0"
authors = ["Allin2000 <serendipitousx@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
gloo-timers = { version = "0.2", features = ["futures"] } # <-- 修正：添加 features = ["futures"]
web-sys = { version = "0.3", features = ["console"] } # <-- 新增

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
