[package]
name = "dioxus_replicate_medium"
version = "0.1.0"
authors = ["Allin2000 <serendipitousx@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = ["router"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.27"
wasm-logger = "0.2"  # 用于web环境的日志
web-sys = { version = "0.3.77", features = [
    'Window',
    'Storage',
    'Event', # 用于您视图中的 web_sys::Event
] }


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

